# gena

./: README.md  pyproject.toml
data/: valid.txt
gena/: anecdotes.csv  telegram.py  vk_api_parser.py
