[tool.poetry]
name = "gena"
version = "0.1.0"
description = ""
authors = ["i.fursov <i.fursov@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.8.2"
aiogram = "^2.14.2"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
