[tool.poetry]
name = "gena"
version = "0.1.0"
description = ""
authors = ["i.fursov <i.fursov@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.14.2"
boto3 = "^1.17.106"
transformers = "3.5.0"
torch = "1.7.0"
razdel = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
